[package]
name = "rust-playground-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
mini-redis = "0.4.1"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
mysql = "24.0.0"
tokio-postgres = "0.7.10"
